# system

./: .env.example  .gitignore  CLAUDE.md  MIGRATION_COMMANDS.md  POSTGRESQL_MIGRATION.md  PWA_SETUP.md  create_test_reminders.py  db.sqlite3  delete_test_reminders.py  generate_icons.py  migrate_to_postgresql.py  pyproject.toml  requirements.txt  send_test_no_sender.py  send_test_sms.py  send_test_sms_dryrun.py
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_userprofile_avatar.py  0003_userprofile_phone_number.py  0004_userprofile_default_currency.py
analytics/: admin.py  forms.py  models.py  urls.py  views.py
analytics/migrations/: 0001_initial.py  0002_remove_event_name_remove_event_timestamp_and_more.py
finance/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
finance/migrations/: 0001_initial.py  0002_transaction_project.py  0003_alter_transaction_options_transaction_category_and_more.py  0004_alter_account_currency_alter_transaction_currency.py  0005_subscription.py  0006_subscription_reminder_days_before.py  (+1 more)
learning/: admin.py  forms.py  models.py  urls.py  views.py
myhub/: asgi.py  celery.py  mixins.py  settings.py  urls.py  wsgi.py
notifications/: apps.py  models.py  tasks.py
plans/: worklogs_feature_plan.md
projects/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
static/css/: style.css
tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: base.html  dashboard.html  offline.html
worklogs/: admin.py  forms.py  models.py  urls.py  views.py
(+44 files in other folders)
