[project]
name = "system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.0",
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-celery-beat>=2.1.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "pytz>=2025.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
]
